Fix the same issue trying to get the shape to look good on iphone

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@ body::after {
   height: 50%;
   width: 100%;
   background: $main-shape;
-  bottom: 7%;
+  bottom: 8.6%;
 
   clip-path: polygon(
     0 0,
